<resources>
    <string name="app_name">My Virtual Kitchen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Username must be alphanumeric and >3 characters</string>
    <string name="username_taken">Username is already taken</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="password_no_match">Passwords do not match</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_failure_no_user">User not found</string>
    <string name="login_failure_invalid_password">Invalid password</string>
    <string name="findRecipeButton">Find Recipe!</string>\
    <string name="findRecipeInput">eggs, milk, carrots, etc.</string>
    <string name="findRecipeDescription">Write in ingredients to search recipes for</string>
    <string name="findRecipeTitle">Find Recipe</string>
    <string name="settingsTitle">Settings</string>
    <string name="textSize">Text Size</string>
    <string name="colorScheme">Color scheme</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="logOut">Log Out</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="log_out">Log out</string>

    <string name="fridge">Fridge</string>
    <string name="pantry">Pantry</string>
    <string name="recipes">Recipes</string>
    <string name="grocery_list">Groceries</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="btn_submit">Submit</string>

    <string name="exp_date">Expiration date</string>

    <string name="fdb_rate">Rate this app:</string>
    <string name="fdb_name">Name </string>
    <string name="fdb_comment">Comment</string>
    <string name="fdb_email">E-mail</string>
    <string name="fdb_subject">Subject</string>
    <string name="fdb_suggestions">Suggestions</string>
    <string name="rating_agree">I agree that my comment will be seen by other users.</string>
    <string name="send_email_click">To send us e-mail with your questions and suggestions click SEND E-MAIL.</string>
    <string name="btn_send_email">Send <br/> e-mail</string>
    <string name="see_comments">To see all comments click SEE COMMENTS </string>
    <string name="btn_see_comments">See <br/> comments</string>
    <string name="email_email_title">for the Pantry item app</string>
    <string name="email_choose_app">Choose app to send email</string>


    <string name="warning_empty_name">Name field can not be empty!</string>
    <string name="warning_checkbox">You have to agree that your comment may be seen by other users.</string>
    <string name="warning_rating">Choose the rating value</string>

    <string name="rating_name">Name:</string>
    <string name="rating_rating">Rating:</string>
    <string name="rating_comment">Comment:</string>
    <string name="ratings_all_received">All ratings and comments:</string>

    <string-array name="messageType">
        <item>Bug report</item>
        <item>Feedback</item>
        <item>Suggestion</item>
        <item>Question</item>
    </string-array>

    <string name="chooseMessage">Choose the type of the message:</string>

    <string name="help_introduction">
        \tThis application allows you to track your food supply in your kitchen and on the expiration dates of your products.
        \n\t You can add necessary items to your grocery list and search for the recipes on the internet.
        \n\tThere are two main categories  for your kitchen items in this app - fridge and pantry items.
        You can add them separately to the appropriate storage place.
    </string>
    <string name="introduction">About the App</string>
    <string name="help_fridge">
        \tYou can add there food that you have in your fridge and freezer and specify the amount of it.
        \n\tFor each product you can set an expiration date if needed. Warning message will be printed for the items that have expired.
        \n\tYou can delete items from the fridge and choose to add item from your fridge to the grocery list.
    </string>
    <string name="help_pantry">
        \t Similarly as for the Fridge section, in the Pantry you can store food that should be stored in the pantry.
        \n\tExpiration status for the products will be shown: warning message will be printed for the items that have expired.
        \n\tYou can delete items from the pantry and choose to add item directly from your pantry to the shopping list.
    </string>
    <string name="help_recipes">
        \tIn this section you can search recipes on the internet by writing key ingredients. It is advised that
        you search recipes using ingredients with the closest expiration dates.
    </string>
    <string name="help_grocery_list">
        \tYou can add items to your Grocery List directly or choose to add them when removing from Fridge or Pantry.
        \n\tYou can check the items you have purchased and remove them from the shopping list.
    </string>
    <string name="help_settings">
        \t You can change application color scheme to Night Mode in order to save your eyes in darker environments.
    </string>
    <string name="help_feedback">
        \t You can leave your feedback about this app in this section.
        \n\tYou can rate the app (from 1 to 5 stars), leave your comment (optional). This feedback will be accesible
        for all the users of this app, therefore your consent will be asked.
        \n\t If you don\'t want for other users to see your comment, you can opt for sending and e-mail to the
        developers of this app. In this case you will have to chose the type of the message and an app for
        sending this e-mail.
        \n\t Also sending e-mail is useful if there are questions to which you did not find answer in this Help section.
        \n\t You can also see other comments without leaving your feedback.
    </string>


</resources>