<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp">

    <GridLayout
        android:id="@+id/grid_layout_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4">

        <Button
            android:id="@+id/btn_fridge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/fridge" />

        <Button
            android:id="@+id/btn_pantry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/pantry" />

        <Button
            android:id="@+id/btn_recipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/recipes" />

        <Button
            android:id="@+id/btn_groceries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/grocery_list" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/settings" />

        <Button
            android:id="@+id/btn_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/help" />

        <Button
            android:id="@+id/signOutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:text="@string/log_out" />

    </GridLayout>

</RelativeLayout>