<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feedback.Feedback">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/feedback_rateThis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/fdb_rate"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:stepSize="1.0"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/rating_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="Name"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/rating_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="start|top"
            android:hint="@string/fdb_comment"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:minLines="1"
            android:padding="15dp" />

        <CheckBox
            android:id="@+id/rating_checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating_agree" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_rating_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btn_cancel" />

            <Button
                android:id="@+id/btn_rating_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btn_submit"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/email_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_email_click"
            android:layout_marginTop="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        />

    </LinearLayout>

</RelativeLayout>