<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.Settings" >

    <Button
        android:id="@+id/TextSizeButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/textSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        android:textAlignment="viewStart"/>

    <Button
        android:id="@+id/ColorSchemeButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/colorScheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextSizeButton"
        tools:ignore="MissingConstraints"
        android:textAlignment="viewStart"/>

    <Button
        android:id="@+id/DeleteAccountButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/deleteAccount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ColorSchemeButton"
        tools:ignore="MissingConstraints"
        android:textAlignment="viewStart"/>

    <Button
        android:id="@+id/LogOutButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/logOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DeleteAccountButton"
        tools:ignore="MissingConstraints"
        android:textAlignment="viewStart"/>

</androidx.constraintlayout.widget.ConstraintLayout>
