<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".findRecipe.FindRecipe">

    <Button
        android:id="@+id/findRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findRecipeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/findRecipeDescription"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:text="@string/findRecipeDescription"
        app:layout_constraintBottom_toTopOf="@+id/findRecipeInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/findRecipeInput"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/findRecipeInput"
        app:layout_constraintBottom_toTopOf="@+id/findRecipeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>